# aiHedgeFund

./: .env.template  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPRINT0_COMPLETE.md  UK Share Data Source for Trading Agents.txt  docker-compose.yml  pyproject.toml  requirements.txt
.bmad/_cfg/: manifest.yaml
.bmad/_cfg/ides/: claude-code.yaml
.bmad/bmb/: config.yaml
.bmad/bmm/: config.yaml
.bmad/cis/: config.yaml
.bmad/core/: config.yaml
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
config/: data_sources.yaml
docs/: bmm-workflow-status.yaml  implementation-readiness-report-2025-11-22.md  index.md  test-design-system.md
docs/architecture/: api-contracts.md  architecture-decision-records-adrs.md  data-architecture.md  decision-summary.md  deployment-architecture.md  development-environment.md  epic-to-architecture-mapping.md  executive-summary.md  implementation-patterns.md  index.md  performance-considerations.md  project-initialization.md  project-structure.md  security-architecture.md  technology-stack-details.md
docs/archive/: 1-system-architecture.md  2-news-processing.md  3-current-workflow.md  4-api-integration.md  5-uk-adaptation-guide.md  HANDOFF-Epic2-Planning.md  agent-network-architecture-conceptual-2025-11-16.md  architecture-whole-2025-11-22.md  brainstorming-session-results-2025-11-16.md  epics-whole-2025-11-22.md  index-brownfield-2025-11-16.md  prd-backup-20251122.md  prd-flexibility-gaps-comprehensive.md  prd-modularity-additions.md  prd-whole-2025-11-22.md  product-brief-AIHedgeFund-2025-11-17.md  research-data-sources-2025-11-16.md  research-domain-2025-11-16.md  research-multi-agent-architecture-2025-11-17.md  validation-report-2025-11-19_20-00-42.md
docs/epics/: epic-1-foundation-data-architecture.md  epic-2-discovery-market-intelligence.md  epics-summary.md  fr-coverage-map.md  functional-requirements-inventory.md  index.md  overview.md
docs/prd/: domain-specific-requirements.md  executive-summary.md  functional-requirements.md  index.md  non-functional-requirements.md  product-scope.md  project-classification.md  references.md  success-criteria.md
docs/sprint-artifacts/: 1-1-project-setup-repository-structure.context.xml  1-1-project-setup-repository-structure.md  1-2-database-schema-models.md  1-3-abstract-data-source-interface.context.xml  1-3-abstract-data-source-interface.md  1-4-eodhd-api-integration-mvp-financial-data-provider.context.xml  1-4-eodhd-api-integration-mvp-financial-data-provider.md  PROVIDER_TESTING_SUMMARY.md  sprint-status.yaml  tech-spec-epic-1.md  validation-report-1-2-database-schema-models-2025-11-23.md
frontend/: Dockerfile  index.html
frontend/src/: main.tsx
scripts/: init_db.sql
src/: config.py  main.py
tests/: conftest.py  test_sprint0_validation.py
tests/integration/: test_db_connectivity.py  test_health.py  test_provider_failover.py
tests/manual/: test_all_providers.py  test_eodhd_demo_api.py
tests/unit/: test_data_sources.py  test_models.py
(+26 files in other folders)
